syntax = "proto3";

package deltran.risk.v1;

option go_package = "github.com/deltran/pb/risk/v1;riskv1";

import "google/protobuf/timestamp.proto";

// RiskService provides real-time risk assessment
service RiskService {
  // Assess payment risk
  rpc AssessPayment(AssessPaymentRequest) returns (AssessPaymentResponse);

  // Get current risk mode
  rpc GetRiskMode(GetRiskModeRequest) returns (GetRiskModeResponse);

  // Switch risk mode
  rpc SwitchRiskMode(SwitchRiskModeRequest) returns (SwitchRiskModeResponse);

  // Ingest market quotes (for FX risk)
  rpc IngestQuotes(IngestQuotesRequest) returns (IngestQuotesResponse);

  // Get nowcast for currency pair
  rpc GetNowcast(GetNowcastRequest) returns (GetNowcastResponse);

  // Get FX exposure
  rpc GetExposure(GetExposureRequest) returns (GetExposureResponse);

  // Get window size recommendation
  rpc GetWindowRecommendation(GetWindowRecommendationRequest) returns (GetWindowRecommendationResponse);
}

// AssessPaymentRequest evaluates risk
message AssessPaymentRequest {
  string payment_id = 1;
  string amount = 2;
  string currency = 3;
  string debtor_account = 4;
  string creditor_account = 5;
  string corridor = 6; // e.g., "US-AE", "IL-AE"

  // Metadata for risk scoring
  map<string, string> metadata = 7;
}

// AssessPaymentResponse returns risk decision
message AssessPaymentResponse {
  string assessment_id = 1;
  string payment_id = 2;

  // Risk score (0-100)
  float risk_score = 3;

  // Risk level
  RiskLevel risk_level = 4;

  // Recommended action
  RiskAction recommended_action = 5;

  // Risk factors contributing to score
  repeated RiskFactor risk_factors = 6;

  // Recommended settlement method
  SettlementMethod recommended_settlement = 7;

  // Timestamp
  google.protobuf.Timestamp assessed_at = 8;
}

// RiskLevel categorization
enum RiskLevel {
  RISK_LEVEL_UNSPECIFIED = 0;
  RISK_LEVEL_LOW = 1;
  RISK_LEVEL_MEDIUM = 2;
  RISK_LEVEL_HIGH = 3;
  RISK_LEVEL_CRITICAL = 4;
}

// RiskAction recommendation
enum RiskAction {
  RISK_ACTION_UNSPECIFIED = 0;
  RISK_ACTION_APPROVE = 1;             // Proceed normally
  RISK_ACTION_ENHANCED_MONITORING = 2; // Proceed with extra logging
  RISK_ACTION_MANUAL_REVIEW = 3;       // Requires human review
  RISK_ACTION_REJECT = 4;              // Reject payment
}

// SettlementMethod recommendation
enum SettlementMethod {
  SETTLEMENT_METHOD_UNSPECIFIED = 0;
  SETTLEMENT_METHOD_INSTANT = 1;  // Real-time gross settlement
  SETTLEMENT_METHOD_PVP = 2;      // Payment vs Payment (atomic)
  SETTLEMENT_METHOD_NETTING = 3;  // Batch netting
}

// RiskFactor explains risk score
message RiskFactor {
  string factor_name = 1;
  string description = 2;
  float contribution = 3; // Contribution to total score (0-100)
  string severity = 4;    // "low", "medium", "high"
}

// GetRiskModeRequest queries current mode
message GetRiskModeRequest {
  // Optional: for specific corridor
  string corridor = 1;
  string currency_pair = 2;
}

// GetRiskModeResponse returns mode info
message GetRiskModeResponse {
  RiskMode current_mode = 1;
  RiskModeProfile profile = 2;
  google.protobuf.Timestamp last_switched_at = 3;
  string switch_reason = 4;
}

// RiskMode defines system behavior
enum RiskMode {
  RISK_MODE_UNSPECIFIED = 0;
  RISK_MODE_LOW = 1;      // Low volatility, high liquidity
  RISK_MODE_MEDIUM = 2;   // Normal conditions
  RISK_MODE_HIGH = 3;     // High volatility, low liquidity
}

// RiskModeProfile defines thresholds
message RiskModeProfile {
  RiskMode mode = 1;

  // Thresholds
  float sigma_threshold = 2;      // Volatility threshold
  float spread_bps_threshold = 3; // Spread threshold
  int32 latency_ms_threshold = 4; // Quote latency threshold
  int32 quote_rate_threshold = 5; // Quotes per minute threshold

  // Limits
  string instant_limit_usd = 6;   // Max instant settlement amount
  string exposure_limit_usd = 7;  // Max open FX exposure

  // Settlement preferences
  SettlementMethod preferred_settlement = 8;
  int32 netting_window_minutes = 9;
}

// SwitchRiskModeRequest changes mode
message SwitchRiskModeRequest {
  RiskMode target_mode = 1;
  string reason = 2;
  bool force = 3; // Skip hysteresis check
}

// SwitchRiskModeResponse confirms switch
message SwitchRiskModeResponse {
  bool success = 1;
  RiskMode previous_mode = 2;
  RiskMode current_mode = 3;
  google.protobuf.Timestamp switched_at = 4;
  string message = 5;
}

// IngestQuotesRequest adds market data
message IngestQuotesRequest {
  repeated Quote quotes = 1;
  string source = 2; // "provider_1", "aggregator", etc.
}

// IngestQuotesResponse confirms ingestion
message IngestQuotesResponse {
  int32 quotes_accepted = 1;
  int32 quotes_rejected = 2;
  google.protobuf.Timestamp ingested_at = 3;
}

// Quote represents market data
message Quote {
  string pair = 1;              // "USD/AED", "USD/INR", etc.
  google.protobuf.Timestamp timestamp = 2;
  double mid = 3;               // Mid price
  double bid = 4;
  double ask = 5;
  double spread_bps = 6;        // Spread in basis points
  string provider_id = 7;
  double recv_latency_ms = 8;   // Reception latency
}

// GetNowcastRequest queries current risk nowcast
message GetNowcastRequest {
  string pair = 1; // "USD/AED"
}

// GetNowcastResponse returns nowcast
message GetNowcastResponse {
  NowcastResult nowcast = 1;
}

// NowcastResult from online risk engine
message NowcastResult {
  string pair = 1;
  google.protobuf.Timestamp timestamp = 2;

  // EWMA volatility (annualized)
  double sigma_ewma = 3;

  // Kalman-smoothed mid price
  double mid_smoothed = 4;

  // Estimated slippage (bps)
  double slippage_hat_bps = 5;

  // Quote rate (quotes/minute)
  int32 quote_rate = 6;

  // Latency p95 (ms)
  double latency_p95 = 7;

  // Reasoning
  map<string, string> reason = 8;

  string version = 9;
}

// GetExposureRequest queries FX exposure
message GetExposureRequest {
  string currency = 1; // Optional: specific currency
}

// GetExposureResponse returns exposure
message GetExposureResponse {
  repeated ExposurePosition positions = 1;
  string total_exposure_usd = 2;
  string exposure_limit_usd = 3;
  float utilization_percent = 4; // 0-100
  bool near_limit = 5;           // >90% utilization
}

// ExposurePosition for a currency
message ExposurePosition {
  string currency = 1;
  string long_position = 2;
  string short_position = 3;
  string net_position = 4;
  string exposure_usd = 5; // USD equivalent
  google.protobuf.Timestamp last_updated = 6;
}

// GetWindowRecommendationRequest queries optimal window
message GetWindowRecommendationRequest {
  string pair = 1;
  string amount = 2; // Expected flow volume
}

// GetWindowRecommendationResponse suggests window
message GetWindowRecommendationResponse {
  int32 recommended_window_minutes = 1;
  string reasoning = 2;
  double confidence = 3; // 0.0-1.0
}